5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1596_1446.log
== TEST (2019-03-26 18:04:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:04:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:04:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:04:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.163722
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:05:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.125763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:05:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.17021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:05:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:05:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.174565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:05:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:05:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.128938
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:06:13) 
-- CODE:

Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.162014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 3, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:14) 
-- CODE:

Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:15) 
-- CODE:

Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:06:25) 
-- CODE:
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.143482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:26) 
-- CODE:
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:07:11) 
-- CODE:
Litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.203414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    doacao=1/3*litros
NameError: name 'litros' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:07:20) 
-- CODE:
litros=float(input("digite o numero"))
doacao=1/3*litros
print(round(doacao,3))
-- EXECUTION TIME:
0.179313
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:48:55) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
quantidade=float(input("quantidadedoada"))
ficar=litroscomprados-quantidade
print(round(ficar,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:49:28) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
quantidade=float(input("quantidadedoada"))
ficar=litroscomprados-quantidade
print(round(ficar,3))
-- EXECUTION TIME:
0.153216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    quantidade=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:50:56) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
quantidade=float(input("quantidadedoada"))
ficar=litroscomprados-quantidade
print(round(ficar,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:51:40) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
quantidade=float(input("quantidadedoada"))
ficar=litroscomprados-quantidade
print(round(ficar,3))
-- EXECUTION TIME:
0.127466
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    quantidade=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:53:51) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
quantidade=float(input("quantidadedoada"))
ficar=litroscomprados-quantidade
print(round(ficar,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quantidade=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:54:12) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
quantidade=float(input("quantidadedoada"))
ficar=litroscomprados-quantidade
print(round(ficar,3))
-- EXECUTION TIME:
0.138846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    quantidade=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:56:32) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:56:36) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:56:37) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:56:40) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:56:43) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:56:57) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar,3))
-- EXECUTION TIME:
0.20311
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
6.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
19.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
14.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:57:12) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2//3
print(round(ficar,3))
-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:57:24) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2//3
print(round(ficar,3))
-- EXECUTION TIME:
0.145793
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
7.0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
20.0
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:57:45) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2//3
print(round(ficar, 3))
-- EXECUTION TIME:
0.130866
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
7.0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
20.0
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:58:28) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2//3
print(round(ficar, 3))
-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:58:34) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2//3
print(round(ficar, 3))
-- EXECUTION TIME:
0.127075
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
7.0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
20.0
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:00:19) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar, 3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:00:33) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar, 3))
-- EXECUTION TIME:
0.248192
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
6.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
19.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
14.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:48:19) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar, 3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:48:28) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar, 3))
-- EXECUTION TIME:
0.18465
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
6.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
19.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
14.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:48:34) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar, 3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:48:40) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar, 3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:48:45) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
ficar=litroscomprados-2/3
print(round(ficar, 3))
-- EXECUTION TIME:
0.138969
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
6.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
19.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
14.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:50:12) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
doacao=litroscomprados-2//3
ficar=litroscomprados-doacao

print(round(ficar, 3))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:50:17) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
doacao=litroscomprados-2//3
ficar=litroscomprados-doacao

print(round(ficar, 3))
-- EXECUTION TIME:
0.17901
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
0.0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
0.0
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:50:33) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
doacao=litroscomprados-2/3
ficar=litroscomprados-doacao
print(round(ficar, 3))
-- OUTPUT:
0.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:50:37) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
doacao=litroscomprados-2/3
ficar=litroscomprados-doacao
print(round(ficar, 3))
-- EXECUTION TIME:
0.115208
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
0.667
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
0.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
0.667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:51:02) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
doacao=litroscomprados*2/3
ficar=litroscomprados-doacao
print(round(ficar, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:51:06) 
-- CODE:
litroscomprados=float(input("litroscomprados"))
doacao=litroscomprados*2/3
ficar=litroscomprados-doacao
print(round(ficar, 3))
-- EXECUTION TIME:
0.159229
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
